[package]
name = "awesome-star-count"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
pulldown-cmark = "0.7.1"
reqwest = { version = "0.10.6", features = ["blocking"] }
url = "2.1.1"
